Fix overlap on subpages, bigger board padding

--- a/css/general.css
+++ b/css/general.css
@@ -3,7 +3,6 @@
 @import url(notes.css);
 
 :root {
-  /*Sticky note colors - https://community.miro.com/ask-the-community-45/sticky-note-hex-values-7604 */
   --yellow: #fff9b1;
   --white: #f5f6f8;
   --lightorange: #f5d128;
@@ -30,7 +29,7 @@ body{
   height:100vh;
   height: calc(100svh - 50px);
   gap:20px;
-  margin:2%;
+  margin:3.5%;
   display:flex;
   flex-direction: column;
   gap:20px;
@@ -71,7 +70,7 @@ body{
 }
 @media screen and (width < 600px) {
   .note {
-    font-size:16px;
+    font-size:15px;
   }
 }
 .animate-note {
